client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list-react-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list-react
  template:
    metadata:
      labels:
        app: todo-list-react
    spec:
      containers:
      - name: todo-list-react
        image: natiiyov/todo-list-client:1.0.1
        ports:
        - containerPort: 80
