client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-react-service
spec:
  selector:
    app: todo-list-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
